Change 'userId' to 'userEmail', add DataIntegrityViolationException handling
